--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<configuration>
+					<mainClass>ml.examen.console.Examen</mainClass>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
